# PitchShift

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  mac_builds.sh  setup.sh  validate.sh  win_builds.sh
.github/: FUNDING.yml
.github/workflows/: cmake.yml
installers/mac/: TempPlugin.pkgproj
installers/windows/: TempPlugin_Install_Script.iss
modules/: CMakeLists.txt
modules/chowdsp_utils/PluginUtils/: PluginBase.h
modules/cmake/: CMakeRC.cmake  SourceFileGroup.cmake  WarningFlags.cmake
scripts/: mac_builds.sh  validate.sh  win_builds.sh
src/: CMakeLists.txt  PitchShift.cpp  PitchShift.h  TempPlugin.cpp  TempPlugin.h  pch.h
